--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 <small>{{ page.date | date: "%-d %B %Y" }}</small>
 <h1>{{ page.title }}</h1>
+<small><a href="{{ site.url }}">Back</a></small>
 
 <p class="view">by {{ page.author | default: site.author }}</p>
 
