Add a back link at the top

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,8 @@ layout: default
 
 <p class="view">by {{ page.author | default: site.author }}</p>
 
+<small><a href="{{ site.url }}">Back</a></small>
+
 {{content}}
 
 <small><a href="{{ site.url }}">Back</a></small>
