--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     <header>
       <div class="container">
         <h1>{{ site.title | default: site.github.repository_name }}</h1>
-        <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+        <h2>{{ site.description | default: site.github.project_tagline }} | {{ site.email }}</h2>
 
         <section id="downloads">
           <a href="https://twitter.com/leiradel"><img src="{{ site.url }}/assets/images/Twitter_Social_Icon_Circle_White.png" /></a>
